# UniVerse

./: pyproject.toml
guide/: admin.py  forms.py  models.py  pars.py  urls.py  views.py
guide/migrations/: 0001_initial.py  0002_alter_program_requirements.py  0003_delete_specialization.py  0004_favoriteunivlist_favoriteproglist.py
guide/static/guide/stayles/: styles.css
guide/templates/guide/: base.html  compare_prog.html  compare_univ.html  detail.html  faculty_detail.html  fav_prog_index.html  fav_univ_index.html  index.html  program_detail.html
guide/templates/registration/: login.html  sign_up.html
universe/: settings.py  urls.py
